fix home and end button mapping issue

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,12 @@ set -g pane-base-index 1
 bind | split-window -h
 bind - split-window -v
 
+# Bind End key to send C-e sequence
+bind -n End send-keys C-e
+
+# Bind Home key to send C-a sequence
+bind -n Home send-keys C-a
+
 # enable mouse support
 set -g mouse on
 
